# QuantTrading

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODEX-BUILD-LOOP.md  Makefile  README.md  STATE.md  build-log.jsonl  crypto-quant-loop-development-plan.md  loop-run-log.jsonl  pyproject.toml
.github/workflows/: ci.yml
config/: exchanges.yaml  fills.yaml  research.yaml  risk-policy.yaml  strategies.yaml  strategy-registry.yaml  symbols.yaml
docs/: approvals.md  fill-fidelity-calibration.md  forward-market-data.md  project-outcome.md  structural-market-data.md
docs/build-notes/: F1.md  F2.md  R1.md  R2.md  R3.md  R4.md  R5.md  R6.md  S0.md  S1.md  S10.md  S11.md  S12.md  S13.md  S14.md  S2.md  S3.md  S4.md  S5.md  S6.md  S7.md  S8.md  S9.md
scripts/: secret_scan.py
src/crypto_quant_loop/: __init__.py  cli.py
src/crypto_quant_loop/backtest/: __init__.py  engine.py  walk_forward.py
src/crypto_quant_loop/config/: __init__.py  loader.py  models.py
tests/backtest/: test_backtest_engine.py  test_walk_forward.py
tests/unit/: test_carry_feasibility.py  test_config_loader.py  test_data_health.py  test_empty_loop.py  test_features.py  test_forward_market_data.py  test_live_adapter.py  test_loop_runtime.py  test_monitoring.py  test_ohlcv_data.py  test_paper_broker.py  test_research_baselines.py  test_research_diagnostics.py  test_research_portfolio.py  test_research_robustness.py  test_research_robustness_battery.py  test_research_strategy_families.py  test_risk_engine.py  test_strategies.py  test_structural_data.py  test_verifier.py
(+40 files in other folders)
