[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "crypto-quant-loop"
version = "0.1.0"
description = "A loop-engineered crypto quant trading system, starting with report-only and paper trading."
readme = "crypto-quant-loop-development-plan.md"
requires-python = ">=3.12"
dependencies = [
  "ccxt>=4.5",
  "duckdb>=1.4",
  "pydantic>=2.12",
  "pyarrow>=22.0",
  "pytz>=2026.1",
  "PyYAML>=6.0.3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.19",
  "pre-commit>=4.4",
  "pytest>=9.0",
  "ruff>=0.14",
  "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
cql-empty-loop = "crypto_quant_loop.cli:main"
cql-fetch-ohlcv = "crypto_quant_loop.data.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_quant_loop"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts"]

[[tool.mypy.overrides]]
module = ["ccxt.*", "duckdb", "pyarrow.*"]
ignore_missing_imports = true
